# failover

./: .gitignore  Cargo.toml  DETAILED.md  Dockerfile  Makefile  README.md  config.example.yaml  install.sh  test-config.yaml  verify.sh
.github/workflows/: release.yml
deploy/: .platform.app.yaml  DEPLOY.md  README.md  docker-compose.yml  fly.toml  quick-deploy.sh  railway.json  railway.toml  render.yaml  vercel.json
src/: main.rs
