[package]
name = "failover"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
hyper = { version = "1", features = ["http1", "http2", "client", "server"] }
http = "1"
tower = "0.5"
tower-http = { version = "0.5", features = ["limit", "util"] }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1"
url = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
humantime = "2"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
bytes = "1"
anyhow = "1"

[profile.release]
lto = true
codegen-units = 1
opt-level = "z"
strip = true
